--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
     <div class="col-sm-4"> 
       <img src="img/sprawlvolleyball.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Project 2</p>    
+      <p>Indoor Volleyball</p>    
     </div>
     <div class="col-sm-4">
       <div class="well">
